--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -25,7 +25,7 @@
             {% for post in posts %}
             <div class="col-md-4 mb-4">
                 <div class="card post-card">
-                    <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
+                    <img src="{{ url_for('uploaded_file', filename=post.image_filename) }}" class="card-img-top" alt="{{ post.title }}">
                     <div class="card-body">
                         <span class="post-date">{{ post.date }}</span>
                         <h5 class="card-title">{{ post.title }}</h5>
